# Voice-ai-agent

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
src/voice_ai_agent/: __init__.py  app.py  config.py  services.py  state.py
tests/: test_config.py
